changed some configs
